[gd_scene load_steps=13 format=2]

[ext_resource path="res://Entity/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entity/Player/PlayerFrames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Entity/Utility/Hitbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entity/Player/PlayerStateIdle.gd" type="Script" id=4]
[ext_resource path="res://Entity/Utility/StateMachine2D/StateMachine2D.gd" type="Script" id=5]
[ext_resource path="res://Entity/Player/PlayerStateKnockback.gd" type="Script" id=6]
[ext_resource path="res://Sound/Weapon/LightRetroGun.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Destruction/Poof.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 15.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 6 )

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hit_invincibility")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 15 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision_layer = 2
collision_mask = 261
script = ExtResource( 1 )

[node name="StateMachine2D" type="Node2D" parent="."]
script = ExtResource( 5 )
autostart = false
initial_state_path = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine2D"]
script = ExtResource( 4 )

[node name="CoyoteTimer" type="Timer" parent="StateMachine2D/Idle"]
one_shot = true

[node name="Knockback" type="Node2D" parent="StateMachine2D"]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "left"

[node name="HarmBlockCastDownLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, 17 )
collision_mask = 32

[node name="HarmBlockCastDownRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 17 )
collision_mask = 32

[node name="HarmBlockCastUpLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, -17 )
collision_mask = 32

[node name="HarmBlockCastUpRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, -17 )
collision_mask = 32

[node name="HarmBlockAreaSide" type="Area2D" parent="."]
position = Vector2( 0, 4 )
collision_layer = 524288
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HarmBlockAreaSide"]
shape = SubResource( 2 )

[node name="HitPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
vulnerable_to_teams = [ 1 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="GunAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 2.0
bus = "Effects"

[node name="BurnAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 2.0
bus = "Effects"
[connection signal="timeout" from="StateMachine2D/Idle/CoyoteTimer" to="StateMachine2D/Idle" method="_on_CoyoteTimer_timeout"]
[connection signal="body_entered" from="HarmBlockAreaSide" to="." method="_on_HarmBlockAreaSide_body_entered"]
[connection signal="attacked" from="Hitbox" to="." method="_on_Hitbox_attacked"]
